--- a/child.html
+++ b/child.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Child 1</h1>
+    <button type="submit">Play game</button
     
 </body>
 </html>
