--- a/child.html
+++ b/child.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="submit">Play game</button
+    <button type="submit">Play game</button>
+    <h1>Hi</h1>
     
 </body>
 </html>
