--- a/simpleLoginPage.html
+++ b/simpleLoginPage.html
@@ -10,7 +10,7 @@
 <body>
     <div class="overall">
         <form action="#">
-            <h1>Login</h1>
+            <h1>Login page</h1>
             <div class="input-box">
                 <label>Username:</label>
                 <input type="text" placeholder="Username">
