--- a/child.html
+++ b/child.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="submit">Play game</button>
+    <button type="submit">Play Game</button>
 </body>
 </html>
