--- a/child.html
+++ b/child.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p> hello world</p>
     <button type="submit">Play Game</button>
 </body>
 </html>
