--- a/Game/playButton.html
+++ b/Game/playButton.html
@@ -7,12 +7,14 @@
     </head>
     <body>
         <div class="images">
-            <img class="threeLines" id="image" src="./threeLines.png" height="50px" width="50px" type="button">
-            <img class="analysisIcon" id="image" src="./analysisIcon.png" height="50px" width="50px" type="button">
-            <img class="gameIcon" id="image" src="./gameIcon.png" height="50px" width="50px" type="button">
+            <img class="threeLines" id="image" src="./Assets/threeLines.png" height="50px" width="50px" type="button">
+            <img class="analysisIcon" id="image" src="./Assets/analysisIcon.png" height="50px" width="50px" type="button">
+            <img class="gameIcon" id="image" src="./Assets/gameIcon.png" height="50px" width="50px" type="button">
         </div>
         <div class="playButton">
+            <a href="./Q1.html">
             <button type="button" class="playBtn">Play</button>
+            </a>
         </div>
     </body>
 </html>
