--- a/Game/JoyLoginPage.html
+++ b/Game/JoyLoginPage.html
@@ -28,9 +28,9 @@
             <button type="button">Forgot Password ?</button>
         </div>
         <div class="submit-button">
-            
+            <a href="playButton.html">
             <button type="button" onclick="window.location.href='./child.html'" class="button">Login</button>
-            
+        </a>
         </div>
         <div class="register">
             <p>Don't have a account?</p><a href="#">Register</a>
