--- a/Game/Q4.html
+++ b/Game/Q4.html
@@ -7,8 +7,12 @@
     </head>
 <body>
     
-    
-    <h1 id="Heading">Q4. Find the animal</h1>
+    <div id="container">
+        <div>
+            <h1 class="heading" style="margin-top:0px;">Q4. Find the Animal</h1>
+        </div>
+        <div id="timer"></div>
+        </div>
     <div class="game">
             <img id="Computer" src="./Assets/ComputerZebra.png"> 
             <div class="choices">
@@ -26,5 +30,24 @@
     <!-- <button class="submit" type="submit" onclick="submitAnswer()">Submit</button> -->
     <button id="submitButton" class="submit" type="button" onclick="submitAnswer()">Submit</button>
     <script src="Q4.js" defer></script>
+    <script>
+        function updateTimer() {
+            const quizEndTime = localStorage.getItem('quizEndTime');
+            const remainingTime = quizEndTime - Date.now();
+
+            if (remainingTime <= 0) {
+                // Timer ran out
+                localStorage.removeItem('quizEndTime'); // Clean up
+                window.location.href = "endPage.html"; // Redirect to result
+            } else {
+                const minutes = Math.floor(remainingTime / 60000);
+                const seconds = Math.floor((remainingTime % 60000) / 1000);
+                document.getElementById("timer").textContent = 
+                    `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+            }
+        }
+
+        setInterval(updateTimer, 1000); // Update every second
+    </script>
 </body>
 </html>
