--- a/Game/Q5.html
+++ b/Game/Q5.html
@@ -6,7 +6,12 @@
         <link rel="stylesheet" href="styleQ5.css">
     </head>
 <body>
-        <h1 id="Heading">Q5. Fill in the blank</h1>
+    <div id="container">
+        <div>
+            <h1 style="margin-top:0px;">Q5. Fill in the blank</h1>
+        </div>
+        <div id="timer"></div>
+        </div>
     <div class="game">
         <div id="nh">
         <img src="./Assets/Horse.png" width="355.1px">
@@ -21,5 +26,48 @@
     <!-- <button class="submit" type="button" onclick="submitAnswer()">Submit</button> -->
     <button id="submitButton" class="submit" type="button" onclick="submitAnswer()">Submit</button>
     <script src="Q5.js" defer></script>
+    <script>
+        function updateTimer() {
+            const quizEndTime = localStorage.getItem('quizEndTime');
+            const remainingTime = quizEndTime - Date.now();
+
+            if (remainingTime <= 0) {
+                // Timer ran out
+                localStorage.removeItem('quizEndTime'); // Clean up
+                window.location.href = "endPage.html"; // Redirect to result
+            } else {
+                const minutes = Math.floor(remainingTime / 60000);
+                const seconds = Math.floor((remainingTime % 60000) / 1000);
+                document.getElementById("timer").textContent = 
+                    `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+            }
+        }
+
+        setInterval(updateTimer, 1000); // Update every second
+    </script>
+
+<script>
+    function updateTimer() {
+        const quizEndTime = localStorage.getItem('quizEndTime');
+        const remainingTime = quizEndTime - Date.now();
+
+        if (remainingTime <= 0) {
+            localStorage.removeItem('quizEndTime'); // Clean up
+            window.location.href = "endPage.html"; // Redirect to result
+        } else {
+            const minutes = Math.floor(remainingTime / 60000);
+            const seconds = Math.floor((remainingTime % 60000) / 1000);
+            document.getElementById("timer").textContent = 
+                `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+        }
+    }
+
+    document.getElementById("submitBtn").onclick = function() {
+        localStorage.removeItem('quizEndTime'); // Stop the timer
+        window.location.href = "endPage.html"; // Redirect to result page
+    };
+
+    setInterval(updateTimer, 1000); // Update every second
+</script>
 </body>
 </html>
