--- a/Game/Q1.html
+++ b/Game/Q1.html
@@ -6,7 +6,12 @@
         <link rel="stylesheet" href="styleQ1.css">
     </head>
 <body>
-    <h1 id="Heading">Q1. Fill in the blank</h1>
+    <div id="container">
+    <div>
+        <h1 style="margin-top:0px;">Q1. Fill in the blank</h1>
+    </div>
+    <div id="timer"></div>
+    </div>
     <div class="game">
         <div id="nh">
         <img src="./Assets/parrot.jpg" width="355.1px">
@@ -20,5 +25,24 @@
     <!-- <button class="submit" type="button" onclick="submitAnswer()">Submit</button> -->
     <button id="submitButton" class="submit" type="button" onclick="submitAnswer()">Submit</button>
     <script src="Q1.js" defer></script>
+    <script>
+        function updateTimer() {
+            const quizEndTime = localStorage.getItem('quizEndTime');
+            const remainingTime = quizEndTime - Date.now();
+
+            if (remainingTime <= 0) {
+                // Timer ran out
+                localStorage.removeItem('quizEndTime'); // Clean up
+                window.location.href = "endPage.html"; // Redirect to result
+            } else {
+                const minutes = Math.floor(remainingTime / 60000);
+                const seconds = Math.floor((remainingTime % 60000) / 1000);
+                document.getElementById("timer").textContent = 
+                    `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+            }
+        }
+
+        setInterval(updateTimer, 1000); // Update every second
+    </script>
 </body>
 </html>
