--- a/Game/endPage.html
+++ b/Game/endPage.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleEndPage.css">
+    <style>body{
+      background-color: #D5BDA9;
+      text-align: center;
+      padding-top: 17%;
+      font-size: 150%;
+  }</style>
 </head>
 <body>
     <!-- <h2>Score: 2/5</h2> -->
