--- a/Game/playButton.html
+++ b/Game/playButton.html
@@ -13,9 +13,17 @@
             <img class="gameIcon" id="image" src="./Assets/gameIcon.png" height="50px" width="50px" type="button">
         </div>
         <div class="playButton">
-            <a href="./Q1.html">
-            <button type="button" class="playBtn">Play</button>
+            <a href="./Q1.html" onclick="startTimer()">
+                <button type="button" class="playBtn">Play</button>
             </a>
         </div>
+
+        <script>
+            function startTimer() {
+                const quizDuration = 3 * 60; // 3 minutes in seconds
+                const endTime = Date.now() + quizDuration * 1000; 
+                localStorage.setItem('quizEndTime', endTime);
+            }
+        </script>
     </body>
 </html>
