Timer delay removed

--- a/Game/Q5.html
+++ b/Game/Q5.html
@@ -42,7 +42,7 @@
                     `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
             }
         }
-
+        updateTimer();
         setInterval(updateTimer, 1000); // Update every second
     </script>
 
