--- a/Game/Q1.html
+++ b/Game/Q1.html
@@ -41,7 +41,7 @@
                     `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
             }
         }
-
+        updateTimer();
         setInterval(updateTimer, 1000); // Update every second
     </script>
 </body>
